--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-spinner-material": "^1.3.1",
+    "redux": "^4.0.5",
     "validator": "^13.1.17"
   },
   "scripts": {
