--- a/package.json
+++ b/package.json
@@ -3,26 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
+    "@ckeditor/ckeditor5-alignment": "^23.1.0",
+    "@ckeditor/ckeditor5-build-classic": "^23.1.0",
+    "@ckeditor/ckeditor5-react": "^3.0.0",
+    "@material-ui/core": "^4.11.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
-    "@material-ui/styles": "^4.10.0",
-    "@material/rtl": "^7.0.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.20.0",
+    "@material-ui/styles": "^4.11.1",
+    "@material/rtl": "^8.0.0",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.2.2",
+    "@tinymce/tinymce-react": "^3.8.1",
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "material-table": "^1.69.2",
     "material-ui-pagination-react": "^1.9.0",
     "materialui-pagination-component": "^1.1.12",
     "moment-jalaali": "^0.9.2",
+    "npm-check-updates": "^10.2.2",
     "numeral": "^2.0.6",
-    "react": "^16.13.1",
+    "react": "^17.0.1",
     "react-confirm-alert": "^2.6.2",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.1",
     "react-js-pagination": "^3.0.3",
+    "react-modern-calendar-datepicker": "^3.1.6",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "4.0.1",
     "react-spinner-material": "^1.3.1",
     "redux": "^4.0.5",
     "validator": "^13.1.17"
